# a-stats

./: README.md  pyproject.toml
.github/workflows/: main.yml
docs/: index.html
src/: html_engine.py  main.py
templates/: base.html  nhl_standings.html
