[tool.poetry]
name = "a-stats"
version = "0.1.0"
description = ""
authors = ["Aleksei Kuzmin <alix.kuzmin@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
